--- a/style.css
+++ b/style.css
@@ -189,6 +189,10 @@ button a {
   transition: 0.3s ease;
   text-align: center;
 }
+.card-box p {
+  text-align: justify;
+  padding: 15px;
+}
 .box img {
   width: 100%;
   height: 100%;
